Remove unused imports, fields, and variables; update `BookRepositoryTest` assertion for readability.